src/index.css
img {
  width: 226px;
  height: 314px;
}

.container {
  display: grid;
  grid-template-columns: 226px 226px 226px 226px 226px;
  gap: 10px;
  margin: 0 auto;
}

.card {
  box-sizing: border-box;
  position: relative;
  width: 226px;
  height: 314px;
  perspective: 100rem;
}

.card.done::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 226px;
  height: 314px;
  background-color: rgba(50, 160, 150, 0.6);
}

.front-side {
  position: absolute;
  top: 0;
  left: 0;
  backface-visibility: hidden;
  transition: all 0.8s ease;
}

.back-side {
  position: absolute;
  top: 0;
  left: 0;
  transform: rotateY(180deg);
  backface-visibility: hidden;
  transition: all 0.8s ease;
}

